--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<h2>Welcome to RegCalcJS</h2>
+
+<p id="demo">A Paragraph.</p>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+<input type="button" class="button button1" value="0" />
+
+
+
+<script src="regcalc.js"></script>
+
+</body>
+</html>
